--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-This file was created by PyCharm 2.7.2 for binding GitHub repository
+Bobi Pu
+bobi.pu@usc.edu
+
+Get data from Youtube, Facebook, Twitter, Streaming, Airplay, Sales, IMVDB, MTV, etc.
+
+To predict Top50 songs for next week.
+
+For details, please check this paper.
+
+https://www.dropbox.com/s/422g95lme9f34ck/Billboard_Top10_Prediction_Bobi_Sam.pdf
